implemented facebook posting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.mindovermatter.fericity" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +28,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" >
+        </activity>
+        <activity android:name=".SafetyActivity" >
+        </activity>
+        <activity android:name=".ReportActivity" >
         </activity>
     </application>
 
