--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.google.android.gms:play-services-location:7.+'
+    compile 'com.google.android.gms:play-services-location:9.0.0'
 }
